--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Community Exchange </title>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <title>Community Exchange</title>
 
     <link
       rel="stylesheet"
